# drorg

./: .env  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md
ci/: azure-ci-cd.yml  azure-deployment.yml
migrations/2018-11-18-182301_create_docs/: down.sql  up.sql
migrations/2018-11-23-220832_add_docs_starred_column/: up.sql
migrations/2018-11-23-231234_add_docs_trashed_column/: up.sql
migrations/2018-11-23-235328_add_docs_modified_time_column/: up.sql
migrations/2018-12-03-021325_add_docs_mimetype_column/: down.sql  up.sql
migrations/2018-12-03-022301_add_links_table/: up.sql
migrations/2018-12-04-224505_add_account_tables/: down.sql  up.sql
migrations/2018-12-06-043053_initialize/: down.sql  up.sql
migrations/2018-12-13-035111_add_listitems_table/: down.sql  up.sql
migrations/2018-12-20-000550_add_docs_size/: down.sql  up.sql
src/: accounts.rs  app.rs  colors.rs  database.rs  errors.rs  gdrive.rs  google_apis.rs  main.rs  schema.rs  token_storage.rs
tcprint/: CHANGELOG.md  Cargo.toml  README.md
tcprint/src/: lib.rs
