[package]
name = "driver"
version = "0.1.0"
authors = ["Peter Williams <peter@newton.cx>"]
description = "Manage Google Drive documents efficiently."
homepage = "https://github.com/pkgw/driver/"
documentation = "https://docs.rs/crate/driver"
repository = "https://github.com/pkgw/driver/"
readme = "README.md"
license = "MIT"

[workspace]

[dependencies]
app_dirs = "^1.2"
failure = "0.1"
google-drive3 = "1.0"
hyper = "^0.10"  # intentionally old version of Hyper
hyper-native-tls = "^0.3"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
structopt = "0.2"
tempfile = "^3.0"
yup-oauth2 = "^1.0"
