[package]
name = "drorg"
version = "0.1.0"
authors = ["Peter Williams <peter@newton.cx>"]
description = "Organize Google Drive documents efficiently."
homepage = "https://github.com/pkgw/drorg/"
documentation = "https://docs.rs/crate/drorg"
repository = "https://github.com/pkgw/drorg/"
readme = "README.md"
license = "MIT"

[workspace]

[dependencies]
app_dirs = "^1.2"
chrono = { version = "0.4", features = ["serde"] }
clap = "^2.32"
diesel = { version = "^1.3", features = ["chrono", "sqlite"] }
failure = "0.1"
google-drive3 = "1.0"
humansize = "^1.1"
hyper = "^0.10"  # intentionally old version of Hyper
hyper-native-tls = "^0.3"
petgraph = "^0.4"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
structopt = "0.2"
tcprint = { path = "tcprint", version = "0.1" }
tempfile = "^3.0"
timeago = "^0.1"
url = "^1.7"
yup-oauth2 = "^1.0"
